--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,13 +48,11 @@
         android:layout_width="350dp"
         android:layout_height="55dp"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="56dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:ems="10"
+        android:hint="Email"
         android:inputType="textWebEmailAddress"
-        android:text="Email Here !"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#E13245"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,14 +65,14 @@
         android:layout_width="347dp"
         android:layout_height="56dp"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="68dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:ems="10"
+        android:hint="Password"
         android:inputType="textPassword"
         android:textColor="#E13245"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.437"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txEmailm" />
 
