--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffeded"
+    android:background="#E3A5A5"
     tools:context=".LoginActivity">
 
     <Button
         android:id="@+id/btnLogin"
-        android:layout_width="350dp"
-        android:layout_height="39dp"
+        android:layout_width="319dp"
+        android:layout_height="81dp"
         android:layout_marginTop="56dp"
         android:text="Login"
         app:backgroundTint="#E13245"
