--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffeded">
+    android:background="#E3A5A5">
 
     <ImageView
         android:id="@+id/imageView6"
@@ -19,7 +19,7 @@
         app:srcCompat="@drawable/strawberry" />
 
     <TextView
-        android:id="@+id/difGame"
+        android:id="@+id/difficultGame"
         android:layout_width="170dp"
         android:layout_height="34dp"
         android:layout_marginTop="12dp"
@@ -43,7 +43,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/difGame" />
+        app:layout_constraintTop_toBottomOf="@+id/difficultGame" />
 
     <TextView
         android:id="@+id/questionGame"
@@ -76,7 +76,7 @@
         app:layout_constraintTop_toBottomOf="@+id/categoryGame" />
 
     <TextView
-        android:id="@+id/scoreGame"
+        android:id="@+id/valueScoreGame"
         android:layout_width="146dp"
         android:layout_height="39dp"
         android:layout_marginTop="20dp"
@@ -93,7 +93,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listQuestion"
+        android:id="@+id/listAnswers"
         android:layout_width="364dp"
         android:layout_height="282dp"
         android:layout_marginStart="15dp"
