--- a/app/src/main/res/menu/fragment_menu.xml
+++ b/app/src/main/res/menu/fragment_menu.xml
@@ -4,15 +4,15 @@
     <item
         android:id="@+id/rankingFragment"
         android:icon="@drawable/ranking"
-        android:title="bt_ranking" />
+        android:title="@string/ranking" />
     <item
         android:id="@+id/mainFragment"
         android:icon="@drawable/home"
-        android:title="bt_home" />
+        android:title="@string/home" />
     <item
         android:id="@+id/logoutFragment"
         android:icon="@drawable/out"
-        android:title="out_quizz" />
+        android:title="@string/logout" />
 
 
 </menu>
