--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -13,7 +13,7 @@
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="487dp"
         android:layout_height="834dp"
-        android:backgroundTint="#DD0101"
+        android:backgroundTint="@color/rosa2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
