--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E3A5A5"
+    android:background="@color/rosa2"
     tools:context=".LoginActivity">
 
     <Button
@@ -13,7 +13,7 @@
         android:layout_height="81dp"
         android:layout_marginTop="56dp"
         android:text="Login"
-        app:backgroundTint="#E13245"
+        app:backgroundTint="@color/rosa1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
         android:layout_width="349dp"
         android:layout_height="47dp"
         android:text="Register"
-        app:backgroundTint="#E13245"
+        app:backgroundTint="@color/rosa1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
@@ -78,13 +78,13 @@
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="174dp"
-        android:layout_height="36dp"
+        android:layout_width="157dp"
+        android:layout_height="44dp"
         android:layout_marginTop="40dp"
         android:freezesText="false"
         android:text="strawberry quiz"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#E13245"
+        android:textColor="@color/rosa1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgLogo" />
