--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E3A5A5"
+    android:background="@color/rosa2"
     tools:context=".Fragments.Category">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -27,7 +27,7 @@
         android:layout_marginTop="4dp"
         android:gravity="center"
         android:text="Select Your Category !"
-        android:textColor="#E13245"
+        android:textColor="@color/rosa1"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.238"
