--- a/app/src/main/res/layout/fragment_difficult.xml
+++ b/app/src/main/res/layout/fragment_difficult.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E3A5A5"
+    android:background="@color/rosa2"
     tools:context=".Fragments.Difficult">
 
     <ImageView
@@ -24,7 +24,7 @@
         android:layout_width="360dp"
         android:layout_height="53dp"
         android:layout_marginTop="44dp"
-        android:backgroundTint="#E13245"
+        android:backgroundTint="@color/rosa1"
         android:text="easy"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,7 +36,7 @@
         android:layout_width="360dp"
         android:layout_height="60dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="#E13245"
+        android:backgroundTint="@color/rosa1"
         android:text="hard"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +48,7 @@
         android:layout_width="360dp"
         android:layout_height="59dp"
         android:layout_marginTop="20dp"
-        android:backgroundTint="#E13245"
+        android:backgroundTint="@color/rosa1"
         android:text="medium"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,7 +59,7 @@
         android:id="@+id/btnLogout"
         android:layout_width="232dp"
         android:layout_height="54dp"
-        android:backgroundTint="#E13245"
+        android:backgroundTint="@color/rosa1"
         android:text="logout"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -76,7 +76,7 @@
         android:layout_marginTop="28dp"
         android:gravity="center"
         android:text="Select your difficulty !"
-        android:textColor="@color/design_default_color_error"
+        android:textColor="@color/rosa1"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.407"
