--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -25,7 +25,6 @@
         android:layout_marginTop="12dp"
         android:background="#F36B79"
         android:gravity="center"
-        android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +37,6 @@
         android:layout_marginTop="24dp"
         android:background="#F36B79"
         android:gravity="center"
-        android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -54,7 +52,6 @@
         android:layout_marginEnd="20dp"
         android:background="#F36B79"
         android:gravity="center"
-        android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.23"
@@ -68,9 +65,10 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="12dp"
         android:background="#F36B79"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="score"
-        android:textColor="@color/white"
+        android:textColor="#FFFFFFFF"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/categoryGame" />
@@ -83,7 +81,6 @@
         android:layout_marginEnd="15dp"
         android:background="#F36B79"
         android:gravity="center"
-        android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/txtScore"
         app:layout_constraintEnd_toEndOf="parent"
@@ -106,6 +103,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/questionGame"
         app:layout_constraintVertical_bias="0.0"
-        tools:listitem="@layout/recycler_resp" />
+        tools:listitem="@layout/rv_answers" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
