--- a/app/src/main/res/layout/fragment_resume.xml
+++ b/app/src/main/res/layout/fragment_resume.xml
@@ -5,34 +5,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E3A5A5"
-    tools:context=".fragments.Resume">
+    tools:context=".Fragments.Resume">
 
     <TextView
         android:id="@+id/DifficultResume"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="118dp"
+        android:layout_height="38dp"
         android:layout_marginTop="32dp"
+        android:background="@color/rosa1"
         android:fontFamily="sans-serif-black"
         android:gravity="center"
         android:shadowColor="@color/black"
         android:text="difficult"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resu" />
+        app:layout_constraintTop_toBottomOf="@+id/txtResu" />
 
     <TextView
         android:id="@+id/CategoryResume"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="113dp"
+        android:layout_height="38dp"
         android:layout_marginTop="32dp"
+        android:background="@color/rosa1"
         android:fontFamily="sans-serif-black"
         android:gravity="center"
         android:shadowColor="@color/black"
         android:text="category"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
@@ -88,13 +90,14 @@
         app:layout_constraintTop_toBottomOf="@+id/CategoryResume" />
 
     <TextView
-        android:id="@+id/resu"
+        android:id="@+id/txtResu"
         android:layout_width="282dp"
         android:layout_height="100dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="68dp"
-        android:backgroundTint="#ffeded"
-        android:fontFamily="casual"
+        android:background="@color/rosa1"
+        android:backgroundTint="@color/rosa1"
+        android:fontFamily="serif"
         android:gravity="center"
         android:shadowColor="@color/black"
         android:text="resume"
@@ -108,10 +111,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:background="@android:color/transparent"
+        android:background="@color/rosa1"
+        android:backgroundTint="@color/rosa1"
         android:shadowColor="@color/black"
         android:text="back"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.479"
         app:layout_constraintStart_toStartOf="parent"
@@ -119,14 +123,15 @@
 
     <TextView
         android:id="@+id/scoreResume"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="104dp"
+        android:layout_height="32dp"
         android:layout_marginTop="32dp"
+        android:background="@color/rosa1"
         android:fontFamily="sans-serif-black"
         android:gravity="center"
         android:shadowColor="@color/black"
         android:text="score"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.483"
