--- a/app/src/main/res/layout/rv_answers.xml
+++ b/app/src/main/res/layout/rv_answers.xml
@@ -12,8 +12,7 @@
         android:id="@+id/bkAnswer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@color/white">
+        android:layout_gravity="center">
 
 
         <TextView
@@ -24,7 +23,7 @@
             android:gravity="center"
             android:padding="15sp"
             android:text="string"
-            android:textColor="@color/white"
+            android:textColor="#FFFFFFFF"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
