--- a/app/src/main/res/layout/rv_category.xml
+++ b/app/src/main/res/layout/rv_category.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10sp"
-    app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="0sp"
     app:cardElevation="2sp">
 
@@ -22,7 +21,7 @@
             android:background="#E13245"
             android:gravity="center"
             android:text="string"
-            android:textColor="@color/white"
+            android:textColor="#FFFFFFFF"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
