--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -1,10 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_grav"
-    app:startDestination="@id/mainActivity2">
-    <activity
-        android:id="@+id/mainActivity2"
-        android:name="com.example.triviaquizz.MainActivity"
-        android:label="MainActivity" />
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navigation_graph_trivia"
+    app:startDestination="@id/difficultFragment">
+
+    <fragment
+        android:id="@+id/difficultFragment"
+        android:name="com.example.triviaquizz.Fragments.Difficult"
+        android:label="fragment_difficult"
+        tools:layout="@layout/fragment_difficult">
+        <action
+            android:id="@+id/action_difficult_to_category"
+            app:destination="@id/categoryFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+    </fragment>
+    <fragment
+        android:id="@+id/categoryFragment"
+        android:name="com.example.triviaquizz.Fragments.Category"
+        android:label="fragment_category"
+        tools:layout="@layout/fragment_category">
+        <action
+            android:id="@+id/action_category_to_game"
+            app:destination="@id/gameFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
+        <argument
+            android:name="difficult"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/gameFragment"
+        android:name="com.example.triviaquizz.Fragments.Game"
+        android:label="fragment_game">
+        <action
+            android:id="@+id/action_game_to_resume"
+            app:destination="@id/resumeFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+        <argument
+            android:name="difficult"
+            app:argType="string" />
+        <argument
+            android:name="category"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_gameFragment_self"
+            app:destination="@id/gameFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/resumeFragment"
+        android:name="com.example.triviaquizz.Fragments.Resume"
+        android:label="fragment_resume"
+        tools:layout="@layout/fragment_resume">
+        <argument
+            android:name="difficult"
+            app:argType="string" />
+        <argument
+            android:name="category"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_resumeFragment_to_difficultFragment"
+            app:destination="@id/difficultFragment" />
+    </fragment>
 </navigation>
