--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,8 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="rosa1">#E13245</color>
+    <color name="rosa2">#E3A5A5</color>
     <color name="white">#FFFFFFFF</color>
+
 </resources>
