ta pegando mas o back ainda n funfa direito

--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:background="#ffeded"
     android:backgroundTint="#E3A5A5"
-    tools:context=".Loading">
+    tools:context=".Controllers.Loading">
 
     <ProgressBar
         android:id="@+id/progressBar"
