--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/rosa2"
-    tools:context=".RegisterActivity">
+    tools:context=".Activitys.RegisterActivity">
 
 
     <EditText
