terminado com a tradução pro portugues

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,7 +12,7 @@
         android:id="@+id/txPassword"
         android:layout_width="277dp"
         android:layout_height="59dp"
-        android:hint="Password"
+        android:hint="@string/Password"
         app:layout_constraintBottom_toTopOf="@+id/btnRegister"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.544"
@@ -24,7 +24,7 @@
         android:id="@+id/txPasswordConfirm"
         android:layout_width="277dp"
         android:layout_height="59dp"
-        android:hint="Confirm Password"
+        android:hint="@string/confirmepassword"
         app:layout_constraintBottom_toTopOf="@+id/btnRegister"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.559"
@@ -35,7 +35,7 @@
         android:id="@+id/txEmail"
         android:layout_width="277dp"
         android:layout_height="59dp"
-        android:hint="Email"
+        android:hint="@string/email"
         app:layout_constraintBottom_toTopOf="@+id/btnRegister"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.544"
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="116dp"
-        android:text="Register"
+        android:text="@string/Register"
         android:textColor="@color/rosa1"
         android:textSize="26sp"
         android:textStyle="bold"
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
         android:backgroundTint="@color/rosa1"
-        android:text="Register"
+        android:text="@string/Register"
         android:textColor="#fff"
         app:layout_constraintBottom_toTopOf="@+id/tvLogin"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,7 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="Login ?"
+        android:text="@string/Login"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -87,7 +87,7 @@
         android:layout_width="279dp"
         android:layout_height="59dp"
         android:layout_marginTop="72dp"
-        android:hint="Name"
+        android:hint="@string/Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.553"
         app:layout_constraintStart_toStartOf="parent"
