--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:layout_width="319dp"
         android:layout_height="81dp"
         android:layout_marginTop="56dp"
-        android:text="Login"
+        android:text="@string/Login"
         app:backgroundTint="@color/rosa1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
@@ -23,7 +23,7 @@
         android:id="@+id/btnRegister"
         android:layout_width="349dp"
         android:layout_height="47dp"
-        android:text="Register"
+        android:text="@string/Register"
         app:backgroundTint="@color/rosa1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +51,7 @@
         android:layout_marginTop="56dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textWebEmailAddress"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#E13245"
@@ -68,7 +68,7 @@
         android:layout_marginTop="68dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/Password"
         android:inputType="textPassword"
         android:textColor="#E13245"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,11 +78,11 @@
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="157dp"
-        android:layout_height="44dp"
+        android:layout_width="177dp"
+        android:layout_height="70dp"
         android:layout_marginTop="40dp"
         android:freezesText="false"
-        android:text="strawberry quiz"
+        android:text="@string/name"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@color/rosa1"
         app:layout_constraintEnd_toEndOf="parent"
