--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -26,7 +26,7 @@
         android:layout_height="89dp"
         android:layout_marginTop="4dp"
         android:gravity="center"
-        android:text="Select Your Category !"
+        android:text="@string/Select"
         android:textColor="@color/rosa1"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
