--- a/app/src/main/res/layout/fragment_difficult.xml
+++ b/app/src/main/res/layout/fragment_difficult.xml
@@ -25,7 +25,7 @@
         android:layout_height="53dp"
         android:layout_marginTop="44dp"
         android:backgroundTint="@color/rosa1"
-        android:text="easy"
+        android:text="@string/easy"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="24dp"
         android:backgroundTint="@color/rosa1"
-        android:text="hard"
+        android:text="@string/hard"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +49,7 @@
         android:layout_height="59dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/rosa1"
-        android:text="medium"
+        android:text="@string/medium"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
         android:layout_width="232dp"
         android:layout_height="54dp"
         android:backgroundTint="@color/rosa1"
-        android:text="logout"
+        android:text="@string/Logout"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,7 +75,7 @@
         android:layout_height="81dp"
         android:layout_marginTop="28dp"
         android:gravity="center"
-        android:text="Select your difficulty !"
+        android:text="@string/SelectDif"
         android:textColor="@color/rosa1"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
