--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -10,10 +10,9 @@
         android:id="@+id/imageView6"
         android:layout_width="135dp"
         android:layout_height="90dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="28dp"
         android:contentDescription="stawberry"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/strawberry" />
@@ -34,7 +33,7 @@
         android:id="@+id/categoryGame"
         android:layout_width="284dp"
         android:layout_height="36dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="12dp"
         android:background="#F36B79"
         android:gravity="center"
         android:textSize="18sp"
@@ -45,8 +44,8 @@
 
     <TextView
         android:id="@+id/questionGame"
-        android:layout_width="358dp"
-        android:layout_height="78dp"
+        android:layout_width="356dp"
+        android:layout_height="142dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="20dp"
@@ -67,7 +66,7 @@
         android:background="#F36B79"
         android:fontFamily="sans-serif"
         android:gravity="center"
-        android:text="score"
+        android:text="@string/score"
         android:textColor="#FFFFFFFF"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,8 +90,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listAnswers"
-        android:layout_width="364dp"
-        android:layout_height="282dp"
+        android:layout_width="363dp"
+        android:layout_height="296dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
