--- a/app/src/main/res/layout/fragment_resume.xml
+++ b/app/src/main/res/layout/fragment_resume.xml
@@ -13,10 +13,10 @@
         android:layout_height="38dp"
         android:layout_marginTop="32dp"
         android:background="@color/rosa1"
-        android:fontFamily="sans-serif-black"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:shadowColor="@color/black"
-        android:text="difficult"
+        android:text="@string/difficult"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,16 +28,16 @@
         android:id="@+id/CategoryResume"
         android:layout_width="113dp"
         android:layout_height="38dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:background="@color/rosa1"
-        android:fontFamily="sans-serif-black"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:shadowColor="@color/black"
-        android:text="category"
+        android:text="@string/category"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/valueDifficultResume" />
 
@@ -91,16 +91,16 @@
 
     <TextView
         android:id="@+id/txtResu"
-        android:layout_width="282dp"
-        android:layout_height="100dp"
+        android:layout_width="283dp"
+        android:layout_height="57dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="68dp"
         android:background="@color/rosa1"
         android:backgroundTint="@color/rosa1"
-        android:fontFamily="serif"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:shadowColor="@color/black"
-        android:text="resume"
+        android:text="@string/resume"
         android:textColor="@color/white"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,30 +111,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:background="@color/rosa1"
         android:backgroundTint="@color/rosa1"
         android:shadowColor="@color/black"
-        android:text="back"
+        android:text="@string/back"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.479"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/valueScoreResume" />
+        app:layout_constraintTop_toBottomOf="@+id/valueScoreResume"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/scoreResume"
         android:layout_width="104dp"
         android:layout_height="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="12dp"
         android:background="@color/rosa1"
-        android:fontFamily="sans-serif-black"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:shadowColor="@color/black"
-        android:text="score"
+        android:text="@string/score"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/valueCategoryResume" />
 
